<resources>
    <string name="app_name">CameraPet</string>
    <string name="facebook">Facebook</string>
    <string name="tweet">Tweet</string>
    <string name="sound">Sound</string>
    <string name="goCamBtn">SHOT</string>
    <string name="encycl">CameraPet Encyclopedia</string>
    <string name="action_settings">Settings</string>
    <string name="returnBtn">GoHome</string>
    <string name="shotBtn">TakePic</string>
    <string name="pet_age">Age :</string>
    <string name="age_times">Hours</string>
    <string name="age_days">th Day</string>
    <string name="age_days_1st">st Day</string>
    <string name="age_days_2nd">nd Day</string>
    <string name="age_days_3rd">rd Day</string>
    <string name="age_months">th Month</string>
    <string name="exp_points">EXP :</string>
    <string name="tutorial01">This app is a camera app. But, this is not just a camera. Taking photos with this app, Your pet who lives in the app grow!!</string>
    <string name="tutorial02">First of all, please take a photo. You can take a photo by simply tapping the preview screen.Please tap below button to return to the game screen.</string>
    <string name="tutorial03">In the game screen, the photo you took has afloat. Please try to move the pet Flick the screen. Pet will eat photo (does\'t disappear photos stored on smartphone).</string>
    <string name="tutorial04">How to move the pet is to flick downwards. Then, pets will bounce in at the bottom. It works when you flick slowly close to the pet. It works quickly that it is far away.</string>
    <string name="tutorial05">Bait Number eaten within 3 hours and satisfaction　is upper left. EXP is the top right. The number of remaining bait is under. The pet\'age and type is bottom.</string>
    <string name="tutorial06">There are many way for pets of experience point add. Take a picture (10pt/1). Feeding the photos (1pt/1). On Twitter or Facebook, you post your CameraPet\'s pet (20 pt /1).</string>
    <string name="tutorial07">Cute. Sometimes cute and disgusting. You can grow to various pet in your upbringing. Please grow together with your friends. Let\'s fun various pet with this app.</string>
    <string name="tutorial_end">Done</string>
    <string name="back_logo">＜</string>
    <string name="next_logo">＞</string>
    <string name="go_forward">Forward</string>
    <string name="return_back">Back</string>
    <string name="pet_unknown_name">"??????"</string>
    <string name="pet_unknown_weight">Weight:?????</string>
    <string name="pet_unknown_length">Length:?????</string>
    <string name="pet_unknown_favorite">Favorite:?????</string>
    <string name="pet_unknown_comment">"???????????????????????????????????????????????????????????????????????????????????????????????????"</string>
    <string name="pet_01_name">Mongrel</string>
    <string name="pet_01_spec">Weight:about melon\nLength:A little longer than pencil case\nFavorite:Smell of owner</string>
    <string name="pet_01_weight">Weight:about melon</string>
    <string name="pet_01_length">Length:A little longer than pencil case</string>
    <string name="pet_01_favorite">Favorite:Smell of owner</string>
    <string name="pet_01_comment">Dog that was picked up in the park. But, one day, He began to suddenly fly in the sky. Moreover, He starts eating photos.</string>
    <string name="pet_message_welcome">I"'"m glad to meet the owner"'"s!</string>
    <string name="how_to_shot">Tap the screen, you can take a picture.</string>
    <string name="download_sns_app">SNS app is not installed. Please download the SNS apps on Google Play.</string>
    <string name="esa_status_morning">Satisfaction of breakfast</string>
    <string name="esa_status_lunch">Satisfaction of lunch</string>
    <string name="esa_status_snack">Satisfaction of snack</string>
    <string name="esa_status_dinner">Satisfaction of dinner</string>
    <string name="esa_status_bedtimeSnack">Satisfaction of bedtime snack</string>
    <string name="number_of_food_this_time">Remaining bait</string>
    <string name="pet_message_esa_zero">Number of bait is zero. If you post my growth record to SNS,or take pictures, you can get more bait!</string>
    <string name="pet_dummy_name">dummy</string>
    <string name="pet_dummy_weight">dummydummy</string>
    <string name="pet_dummy_length">dummydummy</string>
    <string name="pet_dummy_favorite">dummydummy</string>
    <string name="pet_dummy_comment">dummydummydummydummydummydummydummydummydummydummydummydummydummydummydummydummydummydummydummy</string>
    <string name="pet_02_name">Fujiyama dog</string>
    <string name="pet_02_weight">Weight:Lighter than Mt.Fuji</string>
    <string name="pet_02_length">Length:Tiny than Mt.Fuji</string>
    <string name="pet_02_favorite">Favorite:Shizuoka Mikan</string>
    <string name="pet_02_comment">Dog that grows head and feet from Mt. Fuji. Foreigners rejoice as "Oh! FUJIYAMA!". But, Japanese are surprised at this dog.</string>
    <string name="pet_03_name">American Dog</string>
    <string name="pet_03_weight">Weight:5 gallon</string>
    <string name="pet_03_length">Length:5 inch</string>
    <string name="pet_03_favorite">Favorite:Cola</string>
    <string name="pet_03_comment">He seems American. But, like this dog don"'"t live in the US. In the near future, he may fight evil as a watchdog of the world.</string>
    <string name="pet_02b_name">Castle dog</string>
    <string name="pet_02b_weight">Weight:about Watermelon</string>
    <string name="pet_02b_length">Length:Two Smartphone</string>
    <string name="pet_02b_favorite">Favorite:Japanese garden</string>
    <string name="pet_02b_comment">Dog wearing a stone wall of castle. It seems difficult to walk, but he doesn"'"t care. If he is touched stone, he delight</string>
    <string name="pet_03b_name">Snowdog</string>
    <string name="pet_03b_weight">Weight:about snowman</string>
    <string name="pet_03b_length">Length:about snowman</string>
    <string name="pet_03b_favorite">Favorite:Freezer</string>
    <string name="pet_03b_comment">He is not good at summer. As soon as return from outside, he must enter in the freezer. Because he disappears and melts.</string>
    <string name="pet_message_satiety">I"'"m full. Thank you! EXP has been increased 20!</string>
    <string name="pet_message_levelup">I transform into this figure!!</string>
    <string name="pet_message_thanksSNS">Thank you for letting me everyone to know of me. EXP and the rest of the food has been increased 20!</string>
    <string name="pet_message_generic">Hey I thought. I wanna fly fast like airplane.</string>
    <string name="pet_species_name_title">Species name :</string>
    <string name="number_shooting">Number of times your shooting is</string>
    <string name="exp_increased_01">times.Your EXP has increased</string>
    <string name="exp_increased_02">.</string>
    <string name="pet_sns_report_age">"Pet which I have kept in the Android app "CameraPet" are as follows! "</string>
    <string name="pet_sns_report_exp">". EXP is "</string>
    <string name="pet_sns_report_species_name">". Species name is "</string>
    <string name="pet_sns_report_finish">.</string>
    <string name="alarm_sign">" is said that..."</string>
    <string name="alarm_body_txt01">"I don""'""t eat a food many days."</string>
    <string name="alarm_body_txt01b">"I stomach has vacant."</string>
    <string name="alarm_body_txt02">"From "</string>
    <string name="alarm_body_txt03">" which you are kept."</string>
    <string name="now_pet">Now pet!</string>
    <string name="from_camerapet">from Your Pet of CameraPet.</string>
    <string name="pet_message_generic001">Has been tired too fly ...</string>
    <string name="pet_message_generic002">Good wind is blowing today!</string>
    <string name="pet_message_generic003">Your yesterday"'"s clothes, had suits!</string>
    <string name="pet_message_generic004">I also would like to phone smartphone.</string>
    <string name="pet_message_generic005">How are you?</string>
    <string name="pet_message_generic006">I want more easier ...</string>
    <string name="pet_message_generic007">Yesterday, I saw a beautiful woman dog. I want to also meet.</string>
    <string name="pet_message_generic008">I think to try to confess to the favorite beautiful woman dog.</string>
    <string name="pet_message_generic009">I think that It was really good to have met you.</string>
    <string name="pet_message_generic010">I want to nap...</string>
    <string name="pet_message_generic011">Read picture books to me.</string>
    <string name="pet_message_generic012">In fact, I"'"ve been broken heart ...</string>
    <string name="pet_message_generic013">I also want to WhatsApp.</string>
    <string name="pet_message_generic014">What is your favorite season? I like spring.</string>
    <string name="pet_message_generic015">I"'"ve seen your secret. But, I don"'"t tell anyone.</string>
    <string name="pet_message_generic016">I think really that everyone are children.</string>
    <string name="pet_message_generic017">You and I will be fine at night</string>
    <string name="pet_message_generic018">My favorite word is BFF.</string>
    <string name="pet_message_generic019">My favorite word is jk.</string>
    <string name="pet_message_generic020">I want to buy a large amount favorite dish.</string>
    <string name="pet_message_generic021">I"'"ll want to go to the hot springs.</string>
    <string name="pet_message_touch001">Ticklish!</string>
    <string name="pet_message_touch002">Hyaa!</string>
    <string name="pet_message_touch003">Good feeling</string>
    <string name="pet_message_touch004">And stroked be too much to fall out hair.</string>
    <string name="pet_message_touch005">Phew!</string>
    <string name="pet_message_touch006">Be more stroked.</string>
    <string name="pet_message_touch007">Please stroking scrub!</string>
    <string name="pet_message_touch008">Your stroking is very good.So I likely be a habit.</string>
    <string name="pet_message_touch009">Wao！</string>
    <string name="pet_message_touch010">In more stroked the armpit</string>
    <string name="pet_message_touch011">It is like to you to touch!</string>
    <string name="pet_message_touch012">Ass is itchy. Please stroking the buttocks.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="twitter_consumer_key">Z7DhWIlJ2aOZNMLRKniVR0bBC</string>
    <string name="twitter_consumer_secret">MAcOni3ODjTy2kJykyjBQvU0GgvmSF16YhNklrJtkWd5xaZylj</string>
    <string name="twitter_oauth">Authentication of Twitter</string>
    <string name="twitter_callback_url">gabu://twitter</string>
    <string name="pet_message_thanksEncyc">I might embarrassing when seen pet picture book ... Only joking.</string>
    <string name="pet_message_thanksTutorial">You are very hardworking. Expecting!</string>
    <string name="pet_message_thanksCam">Thank you for taking pictures.</string>
    <string name="pet_message_snacktime001">Today"'"s snack is very tasty!</string>
    <string name="pet_message_snacktime002">My dislike is the shower. Because, since lightning is scary.</string>
    <string name="pet_message_snacktime003">In the afternoon, you seem to be tired.But, you look fine at night. Why?</string>
    <string name="camera_pet_copyright">CameraPet Ver.1.0\nCopyright 2015 Shohei Ota (NicoAlu)\nAll rights reserved.</string>
    <string name="special_thanks_title">Special Thanks</string>
    <string name="return_txt">Back</string>
    <string name="special_thanks_talent">Fun illust:KOMAMEDARUMA\nhttp://www6.ocn.ne.jp/~komameda/\n\nFun music:MoppySound\nhttp://moppysound.seesaa.net/\n\nIcon of button:WPZOOM Developer Icon Set by WPZOOM is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License.\nhttp://www.wpzoom.com/\n\nEncyclopedia image:All Vectors\nhttp://www.allvectors.com/</string>
</resources>