<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern_yellow"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/camera_pet_copyright"
                android:textColor="#ffffff"
                android:textSize="@dimen/textsize_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/OtaFbBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="onClickOtaFb"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/fb_btn" />

                <ImageButton
                    android:id="@+id/OtaTwBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="onClickOtaTw"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/twt_btn" />

                <ImageButton
                    android:id="@+id/OtaBlogBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="onClickOtaBlog"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/home_btn" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="0dp" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/special_thanks_title"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/special_thanks_talent"
            android:textColor="#ffffff"
            android:textSize="@dimen/textsize_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:padding="4dp" >

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:onClick="goBack"
            android:text="@string/return_txt"
            android:textColor="#ffffff"
            android:textSize="@dimen/textsize_small" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:padding="4dp"
            android:text=" "
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:onClick="goHome"
            android:text="@string/tutorial_end"
            android:textColor="#ffffff"
            android:textSize="@dimen/textsize_small" />
    </LinearLayout>

</LinearLayout>