<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/pattern_pink"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/encycl"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/pattern_yellow"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="68.17"
            android:background="@drawable/encyclopedia_jimon"
            android:orientation="vertical" >

            <!-- ペット1種類分 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="70dp"
                android:paddingRight="55dp"
                android:paddingTop="60dp" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:paddingTop="5dp"
                    android:src="@drawable/nazono_inu" />

                <!-- ペット見出し専用のlinearlayout -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/kanban_plain"
                    android:orientation="vertical"
                    android:padding="1dp" >

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/pet_unknown_name"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="left|center"
                    android:text="@string/pet_unknown_spec"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/pet_unknown_comment"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- @string/encycl -->


        <!-- 広告スペース -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.09"
            android:background="#dcdcdc"
            android:orientation="vertical" >
        </LinearLayout>

        <!-- ここからボタンセット表示 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13.63"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" "
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/goBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:cropToPadding="false"
                android:onClick="goBack"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/btn_back" />

            <ImageButton
                android:id="@+id/goHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:cropToPadding="false"
                android:onClick="goHome"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/home_btn" />

            <ImageButton
                android:id="@+id/stopSound"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:cropToPadding="false"
                android:onClick="onClickSoundBtn"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/sound_btn" />

            <ImageButton
                android:id="@+id/goforward"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:cropToPadding="false"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/forward_btn" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" "
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>